--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-    color-scheme: light;
+    color-scheme: dark light;
     /* color: rgba(255, 255, 255, 1); */
     font-synthesis: none;
     text-rendering: optimizeLegibility;
