--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@
 }
 
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-    color-scheme: dark light;
-    /* color: rgba(255, 255, 255, 1); */
+    color-scheme: light;
+    color: rgba(0, 0, 0, 1);
+    background-color: rgba(255, 255, 255, 1);
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -20,7 +20,7 @@
 
 body {
     margin: 0;
-    min-width: 320px;
+    min-width: 500px;
     min-height: 100vh;
 }
 
@@ -31,15 +31,15 @@ button {
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    /* background-color: #1a1a1a; */
     cursor: pointer;
     transition: border-color 0.25s;
 }
 
 @media (prefers-color-scheme: light) {
     :root {
-        color: #213547;
-        background-color: #ffffff;
+        color: #213547; 
+        background-color: #ECECEC;
     }
 }
 
@@ -98,7 +98,7 @@ button {
     --chart-5: 340 75% 55%;
   }
 }  */
-/*
+/* 
 @layer base {
   * {
     @apply border-border;
