--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
 
+@tailwind utilities;
 .nice-line {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 :root {
-    line-height: 1.5;
-    font-weight: 400;
-    color-scheme: light;
-    color: rgba(0, 0, 0, 1);
-    background-color: rgba(255, 255, 255, 1);
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
+  font-weight: 400;
+  color-scheme: light;
+  /* color: rgb(0, 0, 0); */
+  background-color: rgba(255, 255, 255, 1);
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-    margin: 0;
-    min-width: 500px;
-    min-height: 100vh;
+  font-family: "Be Vietnam Pro", sans-serif;
+  margin: 0;
+  min-width: 500px;
+  min-height: 100vh;
 }
 
 button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    /* background-color: #1a1a1a; */
-    cursor: pointer;
-    transition: border-color 0.25s;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  /* background-color: #1a1a1a; */
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 
 @media (prefers-color-scheme: light) {
-    :root {
-        color: #213547; 
-        background-color: #ECECEC;
-    }
+  :root {
+    color: #213547;
+    background-color: #ececec;
+  }
 }
 
 /* @layer base {
