--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,14 @@
 }
 
 body {
-  font-family: "Be Vietnam Pro", sans-serif;
+  font-family: "Be Vietnam Pro", "Roboto", "Source Sans 3", sans-serif;
   margin: 0;
   min-width: 500px;
   min-height: 100vh;
+}
+
+#case-study-container {
+  font-family: "Roboto", "Source Sans 3", sans-serif;
 }
 
 button {
