--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@ body {
   min-height: 100vh;
 }
 
-#case-study-container {
+/* #case-study-container {
   font-family: "Roboto", "Source Sans 3", sans-serif;
-}
+} */
 
 button {
   border-radius: 8px;
