--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,16 @@
 
 @tailwind base;
 @tailwind components;
-
 @tailwind utilities;
+
 .nice-line {
   border-radius: 50%;
 }
+
+/* .no-quotes::before,
+.no-quotes::after {
+  content: none !important;
+} */
 
 :root {
   line-height: 1.5;
