fix: all issues with Links and NavLinks not updating the necessary case study page information & extracted page navigation state into a context provider component
Co-authored-by: Jesse Kercheval <jessekerch@users.noreply.github.com>
Co-authored-by: Shane Ziegler <shaneziegler@users.noreply.github.com>
Co-authored-by: Wook Kim <wook2000@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -44,12 +44,12 @@ button {
   transition: border-color 0.25s;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ececec;
   }
-}
+} */
 
 /* @layer base {
   :root {
