--- a/src/index.css
+++ b/src/index.css
@@ -46,12 +46,29 @@ button {
 h2 {
   margin-top: 0px;
 }
-.bird {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
-  transform: translate(-50%, -50%);
+/* .bird {
+    top: 20%;
+    width: 30px;
+    transform: translateX(-500px);
+    animation: bird-x-axis 4s infinite linear;
+}
 
-  animation: wave 4s infinite alternate-reverse;
+.bird-wrapper {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translateY(-100px);
+    animation: bird-y-axis 1s infinite cubic-bezier(0.42, 0, 0.58, 1); /* Adjusted cubic-bezier for smoother animation 
+}*/
+
+@keyframes bird-x-axis {
+  50% {
+    transform: translateX(470px);
+  }
+}
+
+@keyframes bird-y-axis {
+  50% {
+    transform: translateY(100px);
+  }
 }
